fixed null scripts AppLayout issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1395,6 +1395,10 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 .font-medium {
   font-weight: 500;
 }
